--- a/css/media.css
+++ b/css/media.css
@@ -14,6 +14,20 @@
     }
 }*/
 
+@media screen and (min-width: 1350px) and (orientation: landscape) {
+  #block-for-slider {
+    width: 60%;
+    margin: 0 auto 50px;
+  }
+}
+
+@media screen and (max-width: 1350px) and (orientation: landscape) {
+  #block-for-slider {
+    width: 80%;
+    margin: 0 auto 30px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   body {
     background: rgba(255, 255, 255, .4) url(../images/dark-triangles.png) center repeat;
@@ -109,7 +123,8 @@
     padding-right: 20%;
   }
 
-  .mobileFlexFD-C {
+  .mobileFlexFD-C,
+  .onePageContent {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -130,26 +145,24 @@
     width: 90%;
   }
 
-  .screenshots {
+  .screenshots,
+  .description {
     width: 90%;
     margin: 0 auto;
   }
 
   .content__img {
     width: 100%;
-    margin: 0 auto;
+    margin: 5px auto;
+  }
+
+  .content__oneImg {
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 767px) and (orientation: landscape) {
   .logo {
     padding-right: 35%;
-  }
-}
-
-@media screen and (orientation: landscape) {
-  #block-for-slider {
-    width: 80%;
-    margin: 0 auto 30px;
   }
 }
