--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -169,7 +169,7 @@
 /* Note: Design for a width of 768px */
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-    .container {
+    .container, .oneGame__wrapper {
         width: 99%;
     }
 
@@ -396,7 +396,8 @@
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
     .container,
-    .wrapper {
+    .wrapper,
+    .oneGame__wrapper{
         width: 420px;
     }
 
