--- a/dev/media.css
+++ b/dev/media.css
@@ -59,9 +59,14 @@
         flex-direction: column;
         justify-content: space-between;
     }
+    /*.oneGame__wrapper {
+        width: 300px;
+    }*/
     .oneGame__wrapper {
-        height: 200px;
-        width: 90%;
+        margin-bottom: 10px;
+    }
+    .oneGame__wrapper > h1 {
+        margin-bottom: 15px;
     }
     .screenshots, .description {
         width: 90%;
@@ -94,6 +99,12 @@
     #block-for-slider {
         width: 60%;
         margin: 0 auto 50px;
+    }
+}
+
+@media screen and (max-width: 570px) {
+    .oneGame__wrapper {
+        width: 94%;
     }
 }
 
