--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ body {
   -webkit-box-shadow: inset 0 0 20px 5px rgba(0, 0, 0, 0.5);
           box-shadow: inset 0 0 20px 5px rgba(0, 0, 0, 0.5);
   font: 13px/18px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #fff;
+  color: #FFFFF0;
   -webkit-font-smoothing: antialiased;
   /* Fix for webkit rendering */
   -webkit-text-size-adjust: 100%;
@@ -1647,16 +1647,40 @@ ul {
 }
 
 .oneGame__wrapper {
-  width: 70%;
+  color: #FFFFF0;
+  min-width: 75%;
   margin: 30px auto 30px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .oneGame__wrapper > h1 {
+  width: 50%;
+  text-align: center;
   font-size: 30px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid rgba(255, 255, 240, 0.4);
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
 }
 
-.oneGame__wrapper:hover h1 {
+.oneGame__wrapper> h1:hover {
   color: #66e085;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
 }
 
 .onePageContent {
