--- a/css/media.css
+++ b/css/media.css
@@ -148,7 +148,7 @@
     margin-bottom: 10px;
   }
 
-  .oneGame__wrapper > h1 {
+  .oneGame__title {
     margin-bottom: 15px;
     width: 65%;
   }
