--- a/dev/style.css
+++ b/dev/style.css
@@ -1560,7 +1560,7 @@ ul.verdict .bad h4 {
     flex-direction: column;
     justify-content: space-between;
 }
-.oneGame__wrapper > h1 {
+.oneGame__title {
     width: 50%;
     text-align: center;
     font-size: 30px;
@@ -1568,7 +1568,7 @@ ul.verdict .bad h4 {
     border-bottom: 1px solid rgba(255, 255, 240, 0.4);
     transition: all .3s;
 }
-.oneGame__wrapper> h1:hover  {
+.oneGame__title:hover  {
     color: #66e085;
     transition: all .3s;
 }
