--- a/css/style.css
+++ b/css/style.css
@@ -1731,6 +1731,17 @@ ul {
   width: 40%;
 }
 
+/* Random */
+
+body > div.container > div:nth-child(1) > div > div.six.columns.omega.sidebar > aside > ul > li:nth-child(2),
+body > div.container > div > div > div.one-third.column.omega.sidebar.narrow > aside > ul > li:nth-child(2) {
+  padding-top: 0;
+}
+
+.btn {
+  margin-bottom: 10px;
+}
+
 @media only screen and (max-width: 959px) {
   #navigation > ul {
     display: block;
